--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -122,7 +122,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DroidSansM Nerd Font Mono
+    #family: DroidSansM Nerd Font Mono
+    family: SpaceMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
